--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -16,6 +16,10 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  ignore:
+    - linters: [ALL]
+      paths:
+        - catch2/**
   enabled:
     - checkov@3.2.21
     - git-diff-check
