--- a/.github/workflows/lints.yaml
+++ b/.github/workflows/lints.yaml
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Generate Executables & compile_commands.json
-        run: make -j$(nproc) all
+      - name: Run Tests
+        run: make -j$(nproc) test
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
