--- a/.github/workflows/lints.yaml
+++ b/.github/workflows/lints.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Tests
-        run: make -j$(nproc) test
+        run: make -j$(nproc) all
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
