--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -21,6 +21,7 @@ lint:
       paths:
         - catch2/**
   enabled:
+    - actionlint@1.6.26
     - checkov@3.2.21
     - git-diff-check
     - markdownlint@0.39.0
