--- a/.github/workflows/lints.yaml
+++ b/.github/workflows/lints.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Tests
-        run: bear make -j$(nproc) all
+        run: bear make -j${nproc} all
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
